--- a/Internship Project/templates/low salary.html
+++ b/Internship Project/templates/low salary.html
@@ -5,7 +5,7 @@
   
 </head>  
     <body>
-            <h1>Salary will be less than or equal to 50K</h1>
+            <h1>Salary is less than or equal to 50K</h1>
             <style>
                 h1{font-size: 60px;font-weight: bolder;color: rgb(239, 238, 245);background-color: rgb(24, 21, 5);}
             </style>
