--- a/Internship Project/templates/high salary.html
+++ b/Internship Project/templates/high salary.html
@@ -5,7 +5,7 @@
     
 </head>  
     <body>
-            <h1>Salary will be greater than 50K</h1>
+            <h1>Salary is greater than 50K</h1>
             <style>
                 h1{font-size: 60px;font-weight: bolder;text-align: center;color: rgb(224, 187, 187);background-color: rgb(101, 74, 5);}
             </style>
